--- a/Digital.Diary/Digital.Diary.Models/Digital.Diary.Models.csproj
+++ b/Digital.Diary/Digital.Diary.Models/Digital.Diary.Models.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="EntityModels\Departments\" />
+    <Folder Include="ViewModels\" />
+  </ItemGroup>
+
 </Project>
